fix text overflow for dropdown editor and blocklists

--- a/app/assets/stylesheets/components/_block_lists.css.sass
+++ b/app/assets/stylesheets/components/_block_lists.css.sass
@@ -8,6 +8,9 @@
     position: relative
     list-style: none
     text-align: center
+    overflow: hidden
+    white-space: nowrap
+    text-overflow: ellipsis
     background-color: $lightest-gray
     padding: 10px
     color: $link-blue
