--- a/app/assets/stylesheets/components/forms/_cf_dropdown_editor.css.sass
+++ b/app/assets/stylesheets/components/forms/_cf_dropdown_editor.css.sass
@@ -1,8 +1,19 @@
 .cf-dropdown-editor
-  .dropdown-toggle
+  .dropdown-toggle, .dropdown-menu li
     overflow: hidden
     white-space: nowrap
     text-overflow: ellipsis
+    max-width: 672px
+  .dropdown-menu li
+    max-width: 650px
+  .button-icon-right
+    position: absolute
+    left: auto
+    float: none
+    right: 7px
+    top: 7px
+  .flat-button
+    padding-right: 1.5em
   .small-dropdown
     width: 20%
   .medium-dropdown
